--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-ad-id": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
